Version 1.1.6
	Fixes:
	* Cloud Storage increments length correctly now. 
	* Fixed Symlink issues
	* Was exiting on NullPointerException for replication rollback
	Enhancements
	* Refactored cloud storage options. Changed all cloud provider specific options to generic options "cloud-access-key,cloud-bucket-name,cloud-compress,cloud-secret-key"
	* Changed CSByteArrayLongMap claimed array from byte array to bitmap
	* Added Murmur3 hash at a an option for hashing keys
	* Changed hash-length mkfs option to hash-type. This option has to possible values tiger16|tiger24|murmur3_128. Murmur has is a newer hashing computation that can 
	improve IO performance by as much as 40%.You cannot change the hash on an existing volume.
	* Added azure as a cloud storage provider.
	* Added progress bar to loading, DSE Compaction, and Consistancy Check
	* Added attribute to volume tag within xml configuration "allow-external-links" that allows/disallows symlinks from external filesystems. By default this is set 
	to true.
	* Improved getattr performance. Removed file.list for folder size and redundant lookups if it is a folder/file
Version 1.1.5
	Fixes :
	* Replication null pointer error for files without data
	* Replication adds guid to end out target folder
	* Create volume --sdfscli-requre-auth was a typo should have been --sdfscli-require-auth
	* Snapshots were not working when safeclose=false
	* SDFS Volume no longer exits if unable to connect to upstream host
	* Create Volumes with decimal capacity sizes
	* DSE Size was not reporting correctly on remount
	* Garbage Collection was to clearing out old data on first run after remount
	Enhancements
	* Added experimental compaction feature "-c" and the "-forcecompact" to mount options to 
	compact a volume on mount. 
Version 1.1.3
	Fixes:
	* cp -a no longer creates corrupt files
	* files close properly when safeclose enabled without error
	* Lots of other small fixes in code
	Enhancements
	* SDFS Garbage Collection improvements